$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-3 (opened October 27, 2008)

	* nesteddisc: Carsten Dormann (UFZ, Leipzig, Germany) turned my
	attention to the sensitivity of discrepancy to ties in column
	frequencies. These are not handled by any way (yet), but the users
	are warned now about ties. For instance, the example matrix 'A' on
	page 259 of Brualdi & Sanderson (Oecologia 119, 256-264; 1999) can
	be ordered to give discrepancy value = 2 instead of value = 3
	reported in the paper with a different ordering of columns.
	Different random reorderings of species in the 'sipoo' data in
	vegan can give discrepancy values 51 to 58 (and the original
	arbitrary ordering gives 55). This means that discrepancy values
	are not very reliable, but ties should be handled better or the
	function withdrawn from vegan. 

	* ordisurf: returns x, y and z used by contour() following a query
	"[R-sig-eco] output from ordisurf" on Oct 23, 2008.
	
Version 1.16-2 (closed October 27, 2008) --- for Annukka

	* beals: replaced old beals.R with the new code by Miquel de
	Caceres with new methods described in De Caceres & Legendre
	(Oecologia 156, 657-669; 2008). This also implements the
	cross-validatory Beals of Munzbergova & Herben (Oikos 104,
	408-414; 2004) plus many new options of unbiasing estimates. 

	* permatfull: bug of row/col marins is fixed, shuffle argument is
	added to enable individual and sample based randomisation of count
	data (or both) when not all the margins are fixed.

	* anosim: API and documentation made similar to mrpp to combine
	their documentation. Now anosim can take data frame input and find
	the dissimilarities internally.
	
Version 1.16-1 (closed October 10, 2008)

	* dispindmorisita: function to calculate Morisita's index of
	dispersion, and its standardized version. Uses the correct way of
	standardizing, see Note section in help.

	* radfit: Should work with empty sites (no species) or when the